--- a/public/UEditor1/themes/default/css/ueditor.css
+++ b/public/UEditor1/themes/default/css/ueditor.css
@@ -58,6 +58,7 @@ div.edui-box {
 /* control layout */
 .edui-default .edui-button-body, .edui-splitbutton-body, .edui-menubutton-body, .edui-combox-body {
     position: relative;
+    height: 22px;
 }
 
 .edui-default .edui-popup {
@@ -442,6 +443,7 @@ div.edui-box {
     border-radius: 2px;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
+    height: 22px;
 }
 
 .edui-default .edui-toolbar .edui-combox-body .edui-splitborder {
