'活动剧照添加'

--- a/public/UEditor/themes/iframe.css
+++ b/public/UEditor/themes/iframe.css
@@ -1,6 +1,7 @@
 /*可以在这里添加你自己的css*/
 img {
-  max-width: 100%;
+  display: block;
+  width: 100%;
   /*图片自适应宽度*/
 }
 
@@ -27,3 +28,5 @@ body {
 }
 
 /*去除点击图片后出现的拉伸边框*/
+
+
